# libnogo

./: CMakeLists.txt  LICENSE  README.md
include/libnogo/: nogo.h
src/: CMakeLists.txt  board.c  protocol.c
test/: CMakeLists.txt  test_nogo_board.c  test_nogo_protocol.c
